manifests/cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-api-service
spec:
  selector:
    app: hello-world-api-master
  ports:
    - protocol: TCP
      port: 3000  # Service port
      targetPort: 3000  # Container port
