manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-api-service
spec:
  type: LoadBalancer  # Use LoadBalancer to expose the service externally
  selector:
    app: hello-world-api-master
  ports:
    - protocol: TCP
      port: 8080       # The port exposed externally
      targetPort: 3000 # The port on which your pods are listening
